--- a/style.css
+++ b/style.css
@@ -90,8 +90,12 @@
 
 @media screen and (max-width: 600px) {
 
+    .mainContainer > h1 {
+        display: none;
+    }
+
     .mainContainer > .calcBox {
         width: 100%;
-        height: 90%;
+        height: 75%;
     }
 }
